Made Download button mobile responsive

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -22,8 +22,8 @@ import "../styles/global.css";
             <!-- Note: Set the link href target to a PDF file within your project-->
             <a class="btn btn-primary px-4 py-3" href="/Roosevelt_Scaggs_Resume.pdf"
             target="_blank" rel="noopener noreferrer">
-              <div class="d-inline-block bi bi-download me-2"></div>
-              Download Resume
+              <div class="d-inline-block bi bi-download d-md-none"></div>
+              <span class="d-none d-md-block">Download Resume</span>
             </a>
           </div>
           <!-- Education Card 2-->
