Updated resume, added analytics

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,6 +18,7 @@ if (subtitle) {
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <script src="https://cdn.usefathom.com/script.js" data-site="CXVUFVQJ" defer is:inline></script>
     <title>{title}</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
