--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,11 @@ if (subtitle) {
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <script src="https://cdn.usefathom.com/script.js" data-site="CXVUFVQJ" defer is:inline></script>
+    
+    <!-- Fathom - beautiful, simple website analytics -->
+    <script src="/js/fathom.js" is:inline data-site="ROROJOBC" defer></script>
+    <!-- / Fathom -->
+
     <title>{title}</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
