--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,9 +18,13 @@ if (subtitle) {
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    
+
     <!-- Fathom - beautiful, simple website analytics -->
-    <script src="/js/fathom.js" is:inline data-site="ROROJOBC" defer></script>
+    <script
+      src="https://cdn.usefathom.com/script.js"
+      data-site="ROROJOBC"
+      is:inline
+      defer></script>
     <!-- / Fathom -->
 
     <title>{title}</title>
