Updated Anti-Hero card title

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -47,7 +47,7 @@ import MyHousingCardPreview from "../img/my-housing/ProjectCardPreview.png";
           />
           <ProjectCard
             tagList="React, D3.js, Python, Typescript, Flask, PostgreSQL, Bash, Git"
-            projectTitle="ANTI-HERO"
+            projectTitle="ANTI-HERO: Cost Optimized Distributed System"
             description=`A distributed systems research project focusing on balancing resource cost and fault tolerance. Built with intercommunicating REST API backends. Project advised by Professor Wyatt Lloyd of Princeton University.`
             imageSrc={AntiHeroCardPreview.src}
             ,
