--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,13 +19,7 @@ if (subtitle) {
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <!-- Fathom - beautiful, simple website analytics -->
-    <script
-      src="https://cdn.usefathom.com/script.js"
-      data-site="ROROJOBC"
-      is:inline
-      defer></script>
-    <!-- / Fathom -->
+    <script defer src="https://analytics.us.umami.is/script.js" data-website-id="9e07bc5d-68b8-4cbf-bbbb-f3868c934b1e" is:inline></script>
 
     <title>{title}</title>
     <!-- Favicon-->
