--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import localHeadshot from "../img/roosevelt_headshot_transparent.png";
           <div class="text-center text-xxl-start">
             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
               <div class="text-uppercase">
-                Design &middot; Development &middot; Marketing
+                Design &middot; Development &middot; Management
               </div>
             </div>
             <div class="fs-3 fw-light text-muted">
