--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -20,7 +20,8 @@ if (subtitle) {
     <meta name="author" content="" />
 
     <!-- <script defer src="https://analytics.us.umami.is/script.js" data-website-id="9e07bc5d-68b8-4cbf-bbbb-f3868c934b1e" is:inline></script> -->
-    <script defer src="/js/umami.js" data-website-id="9e07bc5d-68b8-4cbf-bbbb-f3868c934b1e" is:inline></script>
+    <script defer src="https://umami.swstx.org/script.js" data-website-id="c1cddefd-306b-433e-9771-bde3bb97dc88" is:inline></script>
+    <!-- <script defer src="/js/umami.js" data-website-id="9e07bc5d-68b8-4cbf-bbbb-f3868c934b1e" ></script> -->
 
     <title>{title}</title>
     <!-- Favicon-->
