Updated resume page and document

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -20,8 +20,11 @@ import "../styles/global.css";
             <h2 class="text-secondary fw-bolder mb-0">Education</h2>
             <!-- Download resume button-->
             <!-- Note: Set the link href target to a PDF file within your project-->
-            <a class="btn btn-primary px-4 py-3" href="/Roosevelt_Scaggs_Resume.pdf"
-            target="_blank" rel="noopener noreferrer">
+            <a
+              class="btn btn-primary px-4 py-3"
+              href="/Roosevelt_Scaggs_Resume.pdf"
+              target="_blank"
+              rel="noopener noreferrer">
               <div class="d-inline-block bi bi-download d-md-none"></div>
               <span class="d-none d-md-block">Download Resume</span>
             </a>
@@ -85,7 +88,7 @@ import "../styles/global.css";
                     <ul>
                       <li>
                         Independently tests and critiques student software
-                        engineering projects for Princeton course COS333.
+                        engineering projects for Princeton course COS333
                       </li>
                     </ul>
                   </div>
@@ -115,20 +118,18 @@ import "../styles/global.css";
                     <ul>
                       <li>
                         Designed and developed web application using Python
-                        (Flask + SQLAlchemy), HTML, CSS, and Javascript.
+                        (Flask + SQLAlchemy), HTML, CSS, and Javascript
                       </li>
                       <li>
-                        Deployed and managed web application on Heroku platform
-                        using Git and configured Google API.
+                        Deployed and managed application on Heroku cloud
+                        platform, setup CI/CD pipeline, and configured Google
+                        API
                       </li>
                       <li>
-                        Met weekly with program management team at THT to gather
-                        application feature requirements and demonstrate
-                        implemented features for further feedback.
+                        Met weekly with THT stakeholders to gather app requirements and showcase implemented features for further feedback
                       </li>
                       <li>
-                        Created promotional video content demonstrating
-                        application features
+                        Increased site traffic by over 400% by creating promotional video content demonstrating application features
                       </li>
                     </ul>
                   </div>
@@ -146,7 +147,8 @@ import "../styles/global.css";
                       Jan 2015 - Jul 2021
                     </div>
                     <div class="small fw-bolder">
-                      Web Developer and Computer Repair Technician
+                      Full Stack Software Engineer and Computer Repair
+                      Technician
                     </div>
                     <div class="small text-primary">BWISE</div>
                     <div class="small text-muted">Dallas, TX</div>
@@ -156,20 +158,28 @@ import "../styles/global.css";
                   <div>
                     <ul>
                       <li>
-                        Designed and developed custom web application with event
-                        scheduling and donation management features.
+                        Developed web app with event scheduling and donation management features using React and Flask
+                      </li>
+                      <li>
+                        Developed containerized applications using Docker enabling rapid application deployment & updates
+                      </li>
+                      <li>
+                        Developed CI/CD pipelines with Jenkins + GitLab to automate build and deployment of Docker containers
+                      </li>
+                      <li>
+                        Configured Kubernetes clusters for container orchestration ensuring high availability and scalability
                       </li>
                       <li>
                         Troubleshooted and repaired iOS, Android, macOS, and
-                        Windows computer software issues.
+                        Windows computer software issues
                       </li>
                       <li>
                         Met weekly with supervisor and updated company website
-                        with a complete redesign.
+                        with a complete redesign
                       </li>
                       <li>
                         Created promotional flyers and videos for company
-                        events.
+                        events
                       </li>
                     </ul>
                   </div>
@@ -195,14 +205,11 @@ import "../styles/global.css";
                   <div>
                     <ul>
                       <li>
-                        Developed a database application to automatically
-                        analyze usage data, offer suggestions for optimizing
-                        cloud costs, and generate savings reports — developed
-                        using Java, VBA, and SQL.
+                        Reduced analysis time by 75% by developing a database application to automatically analyze usage data, offer suggestions for optimizing cloud costs, and generate savings reports — developed using Java, VBA, and SQL
                       </li>
                       <li>
                         Aided cloud migration project by updating firewall rules
-                        to be applied to AWS EC2 instances.
+                        to be applied to AWS EC2 instances
                       </li>
                     </ul>
                   </div>
@@ -226,22 +233,20 @@ import "../styles/global.css";
                     <i class="bi bi-tools"></i>
                   </div>
                   <h3 class="fw-bolder mb-0">
-                    <span class="text-gradient d-inline"
-                      >Skills</span
-                    >
+                    <span class="text-gradient d-inline">Skills</span>
                   </h3>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 mb-4">
                   <div class="col mb-4 mb-md-0">
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                      SEO/SEM Marketing
+                      Agile
                     </div>
                   </div>
                   <div class="col mb-4 mb-md-0">
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                      Statistical Analysis
+                      DevOps
                     </div>
                   </div>
                   <div class="col">
@@ -275,19 +280,19 @@ import "../styles/global.css";
                   <div class="col mb-4 mb-md-0">
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                      Network Security
+                      Network & Info Security
                     </div>
                   </div>
                   <div class="col mb-4 mb-md-0">
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                      Adobe Software Suite
+                      UI / UX
                     </div>
                   </div>
                   <div class="col mb-4 mb-md-0">
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                      Client-focused <br>Needs Assessment
+                      Client-focused <br />Needs Assessment
                     </div>
                   </div>
                 </div>
@@ -300,7 +305,7 @@ import "../styles/global.css";
                     <i class="bi bi-code-slash"></i>
                   </div>
                   <h3 class="fw-bolder mb-0">
-                    <span class="text-gradient d-inline">Languages</span>
+                    <span class="text-gradient d-inline">Languages + Technologies</span>
                   </h3>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 mb-4">
@@ -320,6 +325,44 @@ import "../styles/global.css";
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
                       Typescript/JavaScript
+                    </div>
+                  </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                  <div class="col mb-4 mb-md-0">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Docker
+                    </div>
+                  </div>
+                  <div class="col mb-4 mb-md-0">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Kubernetes
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Express
+                    </div>
+                  </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                  <div class="col mb-4 mb-md-0">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      React
+                    </div>
+                  </div>
+                  <div class="col mb-4 mb-md-0">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Angular
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Flask
                     </div>
                   </div>
                 </div>
@@ -353,7 +396,7 @@ import "../styles/global.css";
                   <div class="col mb-4 mb-md-0">
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                      C#
+                      .NET Core (C#)
                     </div>
                   </div>
                   <div class="col">
