Updated Anti-Hero Orchestrator section

--- a/src/pages/projects/anti-hero.astro
+++ b/src/pages/projects/anti-hero.astro
@@ -292,13 +292,13 @@ import AntiHeroClient from "../../img/anti-hero/AntiHeroClient.png";
         <div class="card-body">
           <div class="row">
             <h3 class="mb-2 text-yellow">
-              Orchestrator intervention, as needed
+              Centralized orchestration, but only as needed
             </h3>
             <h4 class="col-xl-7 mb-4">
               Worker nodes only report to the centralized orchestrator as needed.
               Under normal operating conditions, no centralized communication is
               needed. As a result, even if communication between worker nodes
-              and the Orcehstrator temporarily falters, transactions can
+              and the Orchestrator temporarily falters, transactions can
               continue.
             </h4>
           </div>
