--- a/src/components/FilterBadge.astro
+++ b/src/components/FilterBadge.astro
@@ -28,8 +28,9 @@ const themeMappings = {
   Nginx: "#009739",
   "C#": "#803689",
   IIS: "#4baae9",
-  "Access": "#b02235",
-  "Sequelize": "#2578bf"
+  Access: "#b02235",
+  Sequelize: "#2578bf",
+  "Spring Boot": "#5fb833"
 };
 
 const foregroundColor = themeMappings[badgeText];
