--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -35,7 +35,7 @@ import "../styles/global.css";
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
                   <div class="bg-light p-4 rounded-4">
-                    <div class="text-secondary fw-bolder mb-2">2020 - 2024</div>
+                    <!-- <div class="text-secondary fw-bolder mb-2">2020 - 2024</div> -->
                     <div class="mb-2">
                       <div class="small fw-bolder">Princeton University</div>
                       <div class="small text-muted">Princeton, NJ</div>
@@ -68,7 +68,7 @@ import "../styles/global.css";
         <section>
           <h2 class="text-primary fw-bolder mb-4">Experience</h2>
           <!-- Advanced Programming Techniques Grader -->
-          <div class="card shadow border-0 rounded-4 mb-5">
+          <!-- <div class="card shadow border-0 rounded-4 mb-5">
             <div class="card-body p-5">
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
@@ -95,7 +95,7 @@ import "../styles/global.css";
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- THT -->
           <div class="card shadow border-0 rounded-4 mb-5">
@@ -107,7 +107,7 @@ import "../styles/global.css";
                       Feb 2022 - Aug 2023
                     </div>
                     <div class="small fw-bolder">
-                      Lead Full Stack Web Developer (Contracted)
+                      Project Team Lead/Full Stack Developer
                     </div>
                     <div class="small text-primary">Trenton Health Team</div>
                     <div class="small text-muted">Trenton, NJ</div>
@@ -126,10 +126,33 @@ import "../styles/global.css";
                         API
                       </li>
                       <li>
-                        Met weekly with THT stakeholders to gather app requirements and showcase implemented features for further feedback
+                        Met weekly with THT stakeholders to gather app
+                        requirements and showcase implemented features for
+                        further feedback
                       </li>
                       <li>
-                        Increased site traffic by over 400% by creating promotional video content demonstrating application features
+                        Ensured that projects stayed within scope, met
+                        established timelines, and remained within budget
+                        constraints.
+                      </li>
+                      <li>
+                        Served as liaison between devs and stakeholders,
+                        translating feature requirements into technical action
+                        items.
+                      </li>
+                      <li>
+                        Proactively identified and resolved potential future
+                        project issues to ensure long-term application
+                        stability.
+                      </li>
+                      <li>
+                        Created and maintained project documentation, including
+                        project plans, status reports, and meeting minutes.
+                      </li>
+                      <li>
+                        Increased site traffic by over 400% by creating
+                        promotional video content demonstrating application
+                        features
                       </li>
                     </ul>
                   </div>
@@ -158,16 +181,20 @@ import "../styles/global.css";
                   <div>
                     <ul>
                       <li>
-                        Developed web app with event scheduling and donation management features using React and Flask
+                        Developed web app with event scheduling and donation
+                        management features using React and Flask
                       </li>
                       <li>
-                        Developed containerized applications using Docker enabling rapid application deployment & updates
+                        Developed containerized applications using Docker
+                        enabling rapid application deployment & updates
                       </li>
                       <li>
-                        Developed CI/CD pipelines with Jenkins + GitLab to automate build and deployment of Docker containers
+                        Developed CI/CD pipelines with Jenkins + GitLab to
+                        automate build and deployment of Docker containers
                       </li>
                       <li>
-                        Configured Kubernetes clusters for container orchestration ensuring high availability and scalability
+                        Configured Kubernetes clusters for container
+                        orchestration ensuring high availability and scalability
                       </li>
                       <li>
                         Troubleshooted and repaired iOS, Android, macOS, and
@@ -178,8 +205,7 @@ import "../styles/global.css";
                         with a complete redesign
                       </li>
                       <li>
-                        Created promotional flyers and videos for company
-                        events
+                        Created promotional flyers and videos for company events
                       </li>
                     </ul>
                   </div>
@@ -205,7 +231,10 @@ import "../styles/global.css";
                   <div>
                     <ul>
                       <li>
-                        Reduced analysis time by 75% by developing a database application to automatically analyze usage data, offer suggestions for optimizing cloud costs, and generate savings reports — developed using Java, VBA, and SQL
+                        Reduced analysis time by 75% by developing a database
+                        application to automatically analyze usage data, offer
+                        suggestions for optimizing cloud costs, and generate
+                        savings reports — developed using Java, VBA, and SQL
                       </li>
                       <li>
                         Aided cloud migration project by updating firewall rules
@@ -305,7 +334,9 @@ import "../styles/global.css";
                     <i class="bi bi-code-slash"></i>
                   </div>
                   <h3 class="fw-bolder mb-0">
-                    <span class="text-gradient d-inline">Languages + Technologies</span>
+                    <span class="text-gradient d-inline"
+                      >Languages + Technologies</span
+                    >
                   </h3>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 mb-4">
@@ -342,7 +373,8 @@ import "../styles/global.css";
                     </div>
                   </div>
                   <div class="col">
-                    <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
                       Express
                     </div>
                   </div>
@@ -361,7 +393,8 @@ import "../styles/global.css";
                     </div>
                   </div>
                   <div class="col">
-                    <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
                       Flask
                     </div>
                   </div>
