--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -22,8 +22,8 @@ import "../styles/global.css";
           <div class="row gx-5 justify-content-center">
             <div class="col-lg-8 text-center">
               <p class="mb-5">
-                I am available for contract work, internships, and full time
-                positions. <br /> When you're ready - let me know!
+                I am available for contract work and full time positions.
+                <br /> When you're ready - let me know!
               </p>
               <div class="row gx-5">
                 <div class="col-12 col-md-6 mb-3 mb-md-0" id="EmailCard">
@@ -48,10 +48,11 @@ import "../styles/global.css";
                           ><path
                             d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
                           ></path><polyline points="22,6 12,13 2,6"
-                          ></polyline></svg>
+                          ></polyline></svg
+                        >
                       </div>
                       <div class="small" id="ContactEmailValue">
-                        <a>rscaggs@princeton.edu</a>
+                        <a>roosevelt.scaggs@gmail.com</a>
                       </div>
                     </div>
                   </div>
@@ -83,7 +84,8 @@ import "../styles/global.css";
                           ><path
                             d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
                           ></path><rect x="2" y="9" width="4" height="12"
-                          ></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                          ></rect><circle cx="4" cy="4" r="2"></circle></svg
+                        >
                       </div>
                       <div class="small">Roosevelt Scaggs</div>
                     </div>
