--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -37,7 +37,7 @@ import MyHousingCardPreview from "../img/my-housing/ProjectCardPreview.png";
       <div class="container-xxl">
         <div class="row gx-5 mb-5">
           <ProjectCard
-            tagList="Angular, Express, Typescript, PostgreSQL, Node.js, Nginx, Sequelize, Git"
+            tagList="Angular, Express, Spring Boot, Typescript, PostgreSQL, Node.js, Nginx, Sequelize, Git"
             projectTitle="MAINFRAME Pro"
             description=`A student information management system designed with a mobile-first approach.<br>
             With MAINFRAME's simplified approach to information management, it's easy for school staff and parents to access and update data. No tutorial required.`
