Mainframe Pro - updated grade details subtext

--- a/src/pages/projects/mainframe-pro.astro
+++ b/src/pages/projects/mainframe-pro.astro
@@ -127,7 +127,9 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
             <div class="text-xs text-uppercase-expanded text-primary mb-2">
               Application Features
             </div>
-            <h2 class="mb-5">A good SIS connects staff directly to a student's family</h2>
+            <h2 class="mb-5">
+              A good SIS connects staff directly to a student's family
+            </h2>
           </div>
         </div>
       </div>
@@ -238,7 +240,8 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
               </div>
               <h5>Discipline</h5>
               <p class="card-text small">
-                Logging behavior, both good and bad, is easy to input for instructors & admins with parents being notified instantly
+                Logging behavior, both good and bad, is easy to input for
+                instructors & admins with parents being notified instantly
               </p>
             </div>
           </a>
@@ -467,7 +470,7 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
                 <h3 class="mb-2 text-blue">All New QuickGrader</h3>
                 <h4 class="mb-4">
                   The all new QuickGrader allows educators to input grades at
-                  lightning speed. With changes saved and reflected
+                  lightning speed. With changes being saved and reflected
                   automatically.
                 </h4>
                 <Image
@@ -504,9 +507,9 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
               <div class="row">
                 <h3 class="mb-2 text-blue">Grade Details</h3>
                 <h4 class="mb-4">
-                  The all new QuickGrader allows educators to input grades at
-                  lightning speed. With changes saved and reflected
-                  automatically.
+                  Take the confusion out of student grades with the Grade Details
+                  view showing all graded assignments organized by their
+                  weighted categories.
                 </h4>
                 <Image
                   src={GradeDetails_MBP}
