UI update + resume update

--- a/src/components/FilterToggle.astro
+++ b/src/components/FilterToggle.astro
@@ -38,7 +38,7 @@ const themeMappings = {
   React: "#06a9ec",
   "D3.js": "#f5854b",
   PostgreSQL: "#336691",
-  MSSQL: "#ba313b",
+  MSSQL: "#ffb901",
   Docker: "#0099c3",
   Jenkins: "#325061",
   Git: "#f15132",
@@ -46,11 +46,20 @@ const themeMappings = {
   Express: "#3e873c",
   "Node.js": "#3e873c",
   Java: "#f8981d",
-  Flask: "#000101",
+  Flask: "#575757",
   Python: "#3977a4",
   Javascript: "#e5a027",
   ".NET Core": "#5a2d91",
   EC2: "#ff9800",
+  Typescript: "#3179c7",
+  Nginx: "#009739",
+  "C#": "#803689",
+  IIS: "#4baae9",
+  Access: "#b02235",
+  Sequelize: "#2578bf",
+  "Spring Boot": "#5fb833",
+  "Kafka": "#f33012",
+  "Kubernetes": "#2e6ce6"
 };
 
 const foregroundColor = themeMappings[toggleText];
