--- a/src/pages/projects/mainframe-pro.astro
+++ b/src/pages/projects/mainframe-pro.astro
@@ -369,8 +369,8 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
           <div class="row">
             <h3 class="mb-2 text-yellow">Supercharged Report Generator</h3>
             <h4 class="col-xl-7 mb-4">
-              With the all-new report generator, making report documents is
-              quick and easy
+              With the all-new report generator microservice, powered by Apache Kafka and Spring Boot, making report documents is
+              quick and easy.
             </h4>
           </div>
           <Image
@@ -561,9 +561,9 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
               <h5 class="text-white">What technologies are used?</h5>
               <p class="text-white-50">
                 MAINFRAME Pro was written using HTML, CSS, Typescript,
-                Javascript, and SQL. Specifically, it uses the Angular frontend
+                Java, Javascript, and SQL. Specifically, it uses the Angular frontend
                 framework, Sequelize ORM, PostgreSQL database, and an Express.js
-                backend.
+                backend. In addition, it also features multiple microservices that utilize Spring Boot and Apache Kafka.
               </p>
             </div>
           </div>
@@ -576,9 +576,9 @@ import Discipline_MBP from "../../img/mainframe-pro/MBP_Discipline.png";
             <div class="ms-4">
               <h5 class="text-white">How is the data stored?</h5>
               <p class="text-white-50">
-                The application utilizes Sequelize in order to interface with
+                The application utilizes Sequelize (Javascript) and Spring Data JPA (Java) in order to interface with
                 the PostgreSQL database, however any database compatible with
-                Sequelize can be configured for use with the app.
+                Sequelize and Spring Data JPA can be configured for use with the app.
               </p>
             </div>
           </div>
