--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -26,7 +26,7 @@ import "../styles/global.css";
               target="_blank"
               rel="noopener noreferrer">
               <div class="d-inline-block bi bi-download d-md-none"></div>
-              <span class="d-none d-md-block">Download Resume</span>
+              <span class="d-none d-md-block">Download Full Resume</span>
             </a>
           </div>
           <!-- Education Card 2-->
@@ -35,7 +35,7 @@ import "../styles/global.css";
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
                   <div class="bg-light p-4 rounded-4">
-                    <!-- <div class="text-secondary fw-bolder mb-2">2020 - 2024</div> -->
+                    <div class="text-secondary fw-bolder mb-2">2020 - 2024</div>
                     <div class="mb-2">
                       <div class="small fw-bolder">Princeton University</div>
                       <div class="small text-muted">Princeton, NJ</div>
@@ -66,15 +66,15 @@ import "../styles/global.css";
         </section>
         <!-- Experience Section-->
         <section>
-          <h2 class="text-primary fw-bolder mb-4">Experience</h2>
+          <h2 class="text-primary fw-bolder mb-4">Key Experience</h2>
           <!-- Advanced Programming Techniques Grader -->
-          <!-- <div class="card shadow border-0 rounded-4 mb-5">
+          <div class="card shadow border-0 rounded-4 mb-5">
             <div class="card-body p-5">
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
                   <div class="bg-light p-4 rounded-4">
                     <div class="text-primary fw-bolder mb-2">
-                      Dec 2022 - Present
+                      Dec 2022 - May 2024
                     </div>
                     <div class="small fw-bolder">
                       Advanced Programming Techniques Grader
@@ -86,16 +86,41 @@ import "../styles/global.css";
                 <div class="col-lg-7">
                   <div>
                     <ul>
-                      <li>
-                        Independently tests and critiques student software
-                        engineering projects for Princeton course COS333
-                      </li>
+                      <li>Tested and critiqued student software engineering projects for security vulnerabilities, bugs, and usability.</li>
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
+
+          <!-- Advanced Programming Techniques Grader -->
+          <div class="card shadow border-0 rounded-4 mb-5">
+            <div class="card-body p-5">
+              <div class="row align-items-center gx-5">
+                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                  <div class="bg-light p-4 rounded-4">
+                    <div class="text-primary fw-bolder mb-2">
+                      Aug 2022 - May 2024
+                    </div>
+                    <div class="small fw-bolder">
+                      Peer Academic Adviser
+                    </div>
+                    <div class="small text-primary">Princeton University</div>
+                    <div class="small text-muted">Princeton, NJ</div>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                  <div>
+                    <ul>
+                      <li>Utilized Canvas LMS for promoting engaging and interactive online orientation content.</li>
+                      <li>Aided students in accessing campus resources, including academic workshops and extracurricular opportunities.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <!-- THT -->
           <div class="card shadow border-0 rounded-4 mb-5">
@@ -376,6 +401,26 @@ import "../styles/global.css";
                     <div
                       class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
                       Express
+                    </div>
+                  </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                  <div class="col mb-4 mb-md-0">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Apache Kafka
+                    </div>
+                  </div>
+                  <div class="col mb-4 mb-md-0">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      Spring Boot
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div
+                      class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
+                      JUnit
                     </div>
                   </div>
                 </div>
