--- a/src/components/FilterBadge.astro
+++ b/src/components/FilterBadge.astro
@@ -30,7 +30,9 @@ const themeMappings = {
   IIS: "#4baae9",
   Access: "#b02235",
   Sequelize: "#2578bf",
-  "Spring Boot": "#5fb833"
+  "Spring Boot": "#5fb833",
+  "Kafka": "#f33012",
+  "Kubernetes": "#2e6ce6"
 };
 
 const foregroundColor = themeMappings[badgeText];
