--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -35,7 +35,7 @@ import "../styles/global.css";
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
                   <div class="bg-light p-4 rounded-4">
-                    <div class="text-secondary fw-bolder mb-2">2020 - 2024</div>
+                    <!-- <div class="text-secondary fw-bolder mb-2">2020 - 2024</div> -->
                     <div class="mb-2">
                       <div class="small fw-bolder">Princeton University</div>
                       <div class="small text-muted">Princeton, NJ</div>
@@ -67,8 +67,38 @@ import "../styles/global.css";
         <!-- Experience Section-->
         <section>
           <h2 class="text-primary fw-bolder mb-4">Key Experience</h2>
-          <!-- Advanced Programming Techniques Grader -->
+          
           <div class="card shadow border-0 rounded-4 mb-5">
+            <div class="card-body p-5">
+              <div class="row align-items-center gx-5">
+                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                  <div class="bg-light p-4 rounded-4">
+                    <div class="text-primary fw-bolder mb-2">
+                      Feb 2024 - Present
+                    </div>
+                    <div class="small fw-bolder">
+                      Full Stack Developer
+                    </div>
+                    <div class="small text-primary">Rome Groups Inc.</div>
+                    <div class="small text-muted">Dallas, TX</div>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                  <div>
+                    <ul>
+                      <li>Revamped prototype student information system using Angular, Spring Boot, Express.js, PostgreSQL, and Nginx.</li>
+                      <li>Implemented microservices using Spring Boot and Kafka including a report document generation microservice.</li>
+                      <li>Designed unit tests with JUnit and Jest to ensure feature integrity.</li>
+                      <li>Containerized services with Docker and managed deployments with Kubernetes.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Advanced Programming Techniques Grader -->
+          <!-- <div class="card shadow border-0 rounded-4 mb-5">
             <div class="card-body p-5">
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
@@ -92,10 +122,10 @@ import "../styles/global.css";
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <!-- Advanced Programming Techniques Grader -->
-          <div class="card shadow border-0 rounded-4 mb-5">
+          <!-- Peer Academic Adviser -->
+          <!-- <div class="card shadow border-0 rounded-4 mb-5">
             <div class="card-body p-5">
               <div class="row align-items-center gx-5">
                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
@@ -120,7 +150,7 @@ import "../styles/global.css";
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- THT -->
           <div class="card shadow border-0 rounded-4 mb-5">
@@ -132,7 +162,7 @@ import "../styles/global.css";
                       Feb 2022 - Aug 2023
                     </div>
                     <div class="small fw-bolder">
-                      Project Team Lead/Full Stack Developer
+                      Project Team Lead / Full Stack Developer
                     </div>
                     <div class="small text-primary">Trenton Health Team</div>
                     <div class="small text-muted">Trenton, NJ</div>
