--- a/src/pages/projects/mercer-food-finder.astro
+++ b/src/pages/projects/mercer-food-finder.astro
@@ -404,7 +404,7 @@ import MBP_TutorialSystem from "../../img/mercer-food-finder/MBP_TutorialSystem.
             <h3 class="mb-2 text-purple">Export Data</h3>
             <h4 class="col-xl-7 mb-4">
               Mercer County Free Food Finder's admin panel provides numerous
-              option for importing and exporting resource data, calendar data,
+              options for importing and exporting resource data, calendar data,
               and anonymous user data.
             </h4>
           </div>
