AWS Cost Optimizer update

--- a/src/pages/projects/aws-cost-optimizer.astro
+++ b/src/pages/projects/aws-cost-optimizer.astro
@@ -296,10 +296,7 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
               <div class="row">
                 <h3 class="mb-2 text-purple">Uptime Calculator</h3>
                 <h4 class="mb-4">
-                  New slow-motion screen savers of breathtaking locations from
-                  around the world look beautiful on your large Mac display.
-                  When you log in, they seamlessly become your desktop
-                  wallpaper.
+                  Quickly and easily calculate instance uptime, all without the pen and paper.
                 </h4>
                 <Image
                   src={MBP_UptimeCalculator}
@@ -316,10 +313,7 @@ import MBP_ProjectedSavings from "../../img/aws-cost-optimizer/MBP_ProjectedSavi
               <div class="row">
                 <h3 class="mb-2 text-purple">Instance Pricing Calculator</h3>
                 <h4 class="mb-4">
-                  New slow-motion screen savers of breathtaking locations from
-                  around the world look beautiful on your large Mac display.
-                  When you log in, they seamlessly become your desktop
-                  wallpaper.
+                  Calculate projected instance price metrics, no price lookups required.
                 </h4>
                 <Image
                   src={MBP_PriceCalculator}
